impl(model): implement model

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,39 @@
 {
     "cSpell.words": [
+        "Coord",
         "fluentui",
-        "semibold"
-    ]
+        "periotris",
+        "semibold",
+        "tetrimino",
+        "tetriminos",
+        "periotrisjs"
+    ],
+    "editor.formatOnPaste": true,
+    "editor.formatOnSave": true,
+    "editor.detectIndentation": true,
+    "importSorter.importStringConfiguration.hasSemicolon": false,
+    "importSorter.importStringConfiguration.quoteMark": "double",
+    "importSorter.importStringConfiguration.tabSize": 2,
+    "importSorter.sortConfiguration.customOrderingRules.rules": [
+
+        {
+            "type": "importMember",
+            "regex": "^$",
+            "orderLevel": 5,
+            "disableSort": true
+        },
+        {
+            "regex": "^[^.@]",
+            "orderLevel": 10
+        },
+        {
+            "regex": "^[@]",
+            "orderLevel": 15
+        },
+        {
+            "regex": "^[.]",
+            "orderLevel": 30
+        }
+    ],
+    "importSorter.sortConfiguration.removeUnusedImports": true
 }
