--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write src/**/*.{js,jsx}",
+    "format": "prettier --write src/**/*.{js,jsx,ts,tsx,css,html}",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
@@ -26,6 +26,9 @@
     "@types/react-dom": "^17.0.2",
     "babel-eslint": "^10.0.0",
     "gatsby": "^3.1.1",
+    "lodash": "^4.17.21",
+    "mobx": "^6.3.2",
+    "mobx-react": "^7.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "typescript": "^4.2.3"
