--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
   },
   "homepage": "https://github.com/CSharperMantle/periotrisjs#readme",
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@fluentui/react": "^8.5.0",
     "@fluentui/theme": "^2.0.2",
     "@types/react-dom": "^17.0.2",
     "babel-eslint": "^10.0.0",
     "gatsby": "^3.1.1",
+    "gatsby-plugin-typescript": "^3.1.0",
     "lodash": "^4.17.21",
     "mobx": "^6.3.2",
     "mobx-react": "^7.2.0",
@@ -35,7 +39,6 @@
   },
   "devDependencies": {
     "eslint": "^7.22.0",
-    "gatsby-plugin-typescript": "^3.1.0",
     "prettier": "^2.2.1"
   }
 }
