impl(view): finish basic view implementation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,11 @@
   "cSpell.words": [
     "Coord",
     "Offseted",
+    "Unmount",
     "blockchanged",
     "fluentui",
     "gameend",
+    "lightgreen",
     "periotris",
     "periotrisjs",
     "semibold",
