--- a/package.json
+++ b/package.json
@@ -23,18 +23,21 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/plugin-proposal-decorators": "^7.14.5",
+    "@babel/plugin-transform-typescript": "^7.14.6",
     "@babel/preset-react": "^7.14.5",
-    "@fluentui/react": "^8.5.0",
-    "@fluentui/theme": "^2.0.2",
+    "@material-ui/core": "^4.12.3",
     "@types/react-dom": "^17.0.2",
     "babel-eslint": "^10.0.0",
     "gatsby": "^3.1.1",
+    "gatsby-plugin-material-ui": "^3.0.1",
+    "gatsby-plugin-react-helmet": "^4.10.0",
     "gatsby-plugin-typescript": "^3.1.0",
     "lodash": "^4.17.21",
     "mobx": "^6.3.2",
     "mobx-react": "^7.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
