--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,4 +12,5 @@ updates:
 
   - package-ecosystem: "github-actions"
     directory: "/"
-    interval: "weekly"
+    schedule:
+      interval: "weekly"
