impl: finish basic overall implementation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
     "Unmount",
     "blockchanged",
     "fluentui",
+    "fontawesome",
+    "fortawesome",
     "gameend",
     "lightgreen",
     "periotris",
