--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "@babel/plugin-proposal-decorators": "^7.14.5",
     "@babel/plugin-transform-typescript": "^7.14.6",
     "@babel/preset-react": "^7.14.5",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.12.3",
     "@types/react-dom": "^17.0.2",
     "babel-eslint": "^10.0.0",
@@ -41,7 +45,7 @@
     "typescript": "^4.2.3"
   },
   "devDependencies": {
-    "eslint": "^7.22.0",
-    "prettier": "^2.2.1"
+    "eslint": "^7.32.0",
+    "prettier": "^2.3.2"
   }
 }
