--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "@testing-library/react": "^12.0.0",
     "@types/jest": "^26.0.24",
     "babel-jest": "^27.0.6",
     "eslint": "^7.32.0",
