fix(model): fix incorrect behavior of Tetrimino.tryRotate()
test: add test cases for Tetrimino, Block and Position

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,5 +43,9 @@
     }
   ],
   "importSorter.sortConfiguration.removeUnusedImports": true,
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "jest.jestCommandLine": "npx jest",
+  "jest.autoRun": {
+    "watch": true
+  }
 }
