--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -1,6 +1,6 @@
-name: Node.js with Gatsby
+name: Gatsby
 
-on: [ push, pull_request ]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -9,25 +9,24 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x]
-    
+
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-        
-    - name: Set up dependencies
-      run: |
-        npm i -g gatsby-cli jest
-        npm ci
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
 
-    - name: Build
-      run: |
-        gatsby build
+      - name: Set up dependencies
+        run: |
+          npm i -g gatsby-cli jest
+          npm ci
 
-    - name: Test
-      run: |
-        npx jest
-        
+      - name: Build
+        run: |
+          npm run build
+
+      - name: Test
+        run: |
+          num run test
