--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "mobx-react": "^7.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "worker-loader": "^3.0.8"
   },
   "devDependencies": {
     "@testing-library/react": "^12.0.0",
@@ -52,6 +53,7 @@
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "ts-jest": "^27.0.4",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "workerloader-jest-transformer": "^0.0.5"
   }
 }
