ci: add cache support for npm

--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/setup-node@v2.4.0
         with:
           node-version: ${{ matrix.node-version }}
+          cache: "npm"
 
       - name: Set up dependencies
         run: |
