--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Build
         run: |
-          npm run build
+          npm run build-prefixed
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.4
