feat(components): switch to functional components

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,11 +16,5 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["react", "@typescript-eslint"],
-  "rules": {
-    "indent": ["error", 2],
-    "linebreak-style": ["error", "windows"],
-    "quotes": ["error", "double"],
-    "semi": ["error", "never"]
-  }
+  "plugins": ["react", "@typescript-eslint"]
 }
