--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,1 @@
-{
-  "useTabs": false,
-  "semi": false,
-  "tabWidth": 2,
-  "trailingComma": "es5"
-}
+{ "useTabs": false, "semi": false, "tabWidth": 2, "trailingComma": "es5" }
