feat: add history logging and timer display

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,12 +5,15 @@
     "Unmount",
     "blks",
     "blockchanged",
+    "easytimer",
     "fluentui",
     "fontawesome",
     "fortawesome",
     "gameend",
     "gamestart",
+    "gamestatechanged",
     "lightgreen",
+    "localstorage",
     "periotris",
     "periotrisjs",
     "pressup",
