ci: add coverage step

--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -5,29 +5,65 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v2.4.0
+        with:
+          node-version: 16.x
+          cache: "npm"
+      - name: Set up dependencies
+        run: |
+          npm i -g gatsby-cli jest
+          npm ci
+      - name: Build
+        run: |
+          npm run build
 
+  test:
+    needs: [build]
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
         node-version: [14.x, 16.x]
-
     steps:
       - uses: actions/checkout@v2
-
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2.4.0
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-
       - name: Set up dependencies
         run: |
           npm i -g gatsby-cli jest
           npm ci
-
       - name: Build
         run: |
           npm run build
-
       - name: Test
         run: |
           npm run test
+
+  coverage:
+    needs: [test]
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v2.4.0
+        with:
+          node-version: 16.x
+          cache: "npm"
+      - name: Set up dependencies
+        run: |
+          npm i -g gatsby-cli jest
+          npm ci
+      - name: Build
+        run: |
+          npm run build
+      - name: Coverage
+        uses: paambaati/codeclimate-action@v2.2.4
+        env:
+          CC_TEST_REPORTER_ID: ddffd47acceb5c9764f53559ac5316428d05d4406f85370daf56211fd01aae2c
+        with:
+          coverageCommand: npm run coverage
