--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "format": "prettier --write src/**/*.{js,jsx,ts,tsx,css,html}",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "npx jest"
+    "test": "npx jest",
+    "coverage": "npx jest --coverage --coverageDirectory coverage"
   },
   "repository": {
     "type": "git",
