--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -1,6 +1,6 @@
 name: Gatsby
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
   build:
@@ -62,7 +62,7 @@ jobs:
         run: |
           npm run build
       - name: Coverage
-        uses: paambaati/codeclimate-action@v2.2.4
+        uses: paambaati/codeclimate-action@v2.7.5
         env:
           CC_TEST_REPORTER_ID: ddffd47acceb5c9764f53559ac5316428d05d4406f85370daf56211fd01aae2c
         with:
