--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -1,6 +1,6 @@
 name: Gatsby
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -46,6 +46,7 @@ jobs:
 
   coverage:
     needs: [test]
+    if: github.event_name != 'pull_request
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
