--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -46,7 +46,7 @@ jobs:
 
   coverage:
     needs: [test]
-    if: github.event_name != 'pull_request
+    if: github.event_name != "pull_request"
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
