--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "test": "npx jest",
-    "coverage": "npx jest --coverage --coverageDirectory coverage"
+    "coverage": "npx jest --coverage"
   },
   "repository": {
     "type": "git",
