--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -15,3 +15,9 @@ exclude_patterns:
   - "**/__tests__/"
   - "**/__mocks__/"
   - "**/dist/"
+  - "plugins/"
+  - "static/"
+  - "ject.config.js"
+  - "jest-preprocess.js"
+  - "gatsby-config.js"
+  - "gatsby-node.js"
