--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build-prefixed": "gatsby build --prefix-paths",
     "develop": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx,ts,tsx,css,html}",
-    "start": "npm run develop",
+    "start": "yarn run develop",
     "serve": "gatsby serve",
-    "test": "npx jest",
-    "coverage": "npx jest --coverage"
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
