--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -11,10 +11,10 @@ jobs:
         uses: actions/setup-node@v2.4.0
         with:
           node-version: 16.x
-          cache: "npm"
+          cache: "yarn"
       - name: Set up dependencies
         run: |
-          yarn global install gatsby-cli
+          yarn global add gatsby-cli
           yarn install
       - name: Build
         run: |
@@ -35,7 +35,7 @@ jobs:
           cache: "yarn"
       - name: Set up dependencies
         run: |
-          yarn global install jest
+          yarn global add jest
           yarn install
       - name: Test
         run: |
@@ -51,10 +51,10 @@ jobs:
         uses: actions/setup-node@v2.4.0
         with:
           node-version: 16.x
-          cache: "npm"
+          cache: "yarn"
       - name: Set up dependencies
         run: |
-          yarn global install jest
+          yarn global add jest
           yarn install
       - name: Coverage
         uses: paambaati/codeclimate-action@v2.7.5
