--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -22,10 +22,14 @@ jobs:
 
   test:
     needs: [build]
-    runs-on: ubuntu-20.04
     strategy:
       matrix:
-        node-version: [14.x, 16.x]
+        os:
+          - ubuntu-20.04
+          - windows-2019
+        node-version: 
+          - 14.x
+          - 16.x
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
@@ -43,7 +47,7 @@ jobs:
 
   coverage:
     needs: [test]
-    if: ${{ github.event_name != 'pull_request' }}
+    if: ${{ github.event_name != 'pull_request' && github.ref == 'refs/heads/develop' }}
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
