--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -30,9 +30,10 @@ jobs:
         node-version: 
           - 14.x
           - 16.x
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js ${{ matrix.node-version }} on ${{ matrix.os }}
         uses: actions/setup-node@v2.4.0
         with:
           node-version: ${{ matrix.node-version }}
