--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Set up dependencies
         run: |
           yarn global add gatsby-cli
-          yarn install
+          yarn install --frozen-lockfile
 
       - name: Build
         run: |
