--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up dependencies
         run: |
           yarn global add gatsby-cli
-          yarn install
+          yarn install --frozen-lockfile
       - name: Build
         run: |
           yarn run build
@@ -27,7 +27,7 @@ jobs:
         os:
           - ubuntu-20.04
           - windows-2019
-        node-version: 
+        node-version:
           - 14.x
           - 16.x
     runs-on: ${{ matrix.os }}
@@ -41,7 +41,7 @@ jobs:
       - name: Set up dependencies
         run: |
           yarn global add jest
-          yarn install
+          yarn install --frozen-lockfile
       - name: Test
         run: |
           yarn run test
@@ -60,7 +60,7 @@ jobs:
       - name: Set up dependencies
         run: |
           yarn global add jest
-          yarn install
+          yarn install --frozen-lockfile
       - name: Coverage
         uses: paambaati/codeclimate-action@v2.7.5
         env:
