--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "periotrisjs",
-  "version": "1.6.3",
-  "description": "Periotris game built with Gatsby, React and Material UI",
+  "version": "1.6.4",
+  "description": "Learn the Periodic Table of Elements in a fun way, directly in your browsers",
   "scripts": {
     "build": "gatsby build",
     "build-prefixed": "gatsby build --prefix-paths",
@@ -57,14 +57,17 @@
     "@types/react-dom": "^17.0.2",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
+    "@wasm-tool/wasm-pack-plugin": "^1.5.0",
     "babel-eslint": "^10.0.0",
     "babel-jest": "^27.0.6",
+    "copy-webpack-plugin": "^9.0.1",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.24.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
     "jsdom": "^16.7.0",
     "prettier": "^2.3.2",
+    "rimraf": "^3.0.2",
     "ts-jest": "^27.0.4",
     "typescript": "^4.2.3",
     "workerloader-jest-transformer": "^0.0.5"
