--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,22 +11,23 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
       - name: Use Node.js 16.x
         uses: actions/setup-node@v2.4.0
         with:
           node-version: 16.x
           cache: "yarn"
-
+      - name: Use Rust stable
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
       - name: Set up dependencies
         run: |
           yarn global add gatsby-cli
           yarn install --frozen-lockfile
-
       - name: Build
         run: |
           yarn run build-prefixed
-
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
