--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -12,6 +12,11 @@ jobs:
         with:
           node-version: 16.x
           cache: "yarn"
+      - name: Use Rust stable
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
       - name: Set up dependencies
         run: |
           yarn global add gatsby-cli
@@ -38,6 +43,11 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "yarn"
+      - name: Use Rust stable
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
       - name: Set up dependencies
         run: |
           yarn global add jest
@@ -57,6 +67,11 @@ jobs:
         with:
           node-version: 16.x
           cache: "yarn"
+      - name: Use Rust stable
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
       - name: Set up dependencies
         run: |
           yarn global add jest
