chore(wasm/model): impl topo sort

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,8 +18,10 @@
     "periotrisjs",
     "pressup",
     "semibold",
+    "structs",
     "tetrimino",
     "tetriminos",
+    "topo",
     "Unmount",
     "viewmodel",
     "workerloader"
