--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -14,3 +14,9 @@ vscode:
     - esbenp.prettier-vscode
     - dbaeumer.vscode-eslint
     - vscode-icons-team.vscode-icons
+    - bungcip.better-toml
+    - kavod-io.vscode-jest-test-adapter
+    - rust-lang.rust
+    - wayou.vscode-todo-highlight
+    - mike-co.import-sorter
+    - hbenl.vscode-test-explorer
