--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,12 +14,16 @@ crate-type = ["cdylib", "rlib"]
 path = "src/wasm/lib.rs"
 
 [dependencies]
-wasm-bindgen = "0.2.63"
-
-wee_alloc = { version = "0.4.5", optional = true }
+console_error_panic_hook = "^0.1.6"
+getrandom = { version = "^0.2.3", features = ["js"] }
+js-sys = "^0.3.55"
+rand = "^0.8.3"
+serde = { version = "^1.0.130", features = ["derive"] }
+wasm-bindgen = { version = "^0.2.63", features = ["serde-serialize"]}
+wee_alloc = { version = "^0.4.5", optional = true }
 
 [dev-dependencies]
-wasm-bindgen-test = "0.3.13"
+wasm-bindgen-test = "^0.3.13"
 
 [profile.release]
 opt-level = 3
