--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "lodash": "^4.17.21",
     "mobx": "^6.3.2",
     "mobx-react": "^7.2.0",
+    "notistack": "^2.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
