--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
     "gamestatechanged",
     "lightgreen",
     "localstorage",
+    "notistack",
     "Offseted",
     "periotris",
     "periotrisjs",
