--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 edition = "2018"
 license = "GPL-3.0-or-later"
 
+[build]
+incremental = true
+
 [lib]
 crate-type = ["cdylib", "rlib"]
 path = "src/wasm/lib.rs"
@@ -43,4 +46,4 @@ wasm-bindgen-test = "^0.3.13"
 
 [profile.release]
 opt-level = 3
-lto = "thin"
+lto = true
