--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "periotrisjs",
-  "version": "1.8.0",
+  "version": "1.8.1",
   "description": "Learn the Periodic Table of Elements in a fun way, directly in your browsers",
   "scripts": {
     "build": "gatsby build",
     "build-prefixed": "gatsby build --prefix-paths",
-    "build-wasm": "npx rimraf pkg && wasm-pack build",
-    "clean": "npx rimraf pkg coverage public && gatsby clean",
+    "clean": "npx rimraf coverage public && gatsby clean",
     "coverage": "jest --coverage",
     "develop": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx,ts,tsx,css,html}",
@@ -64,7 +63,6 @@
     "@types/react-dom": "^17.0.2",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
-    "@wasm-tool/wasm-pack-plugin": "^1.5.0",
     "babel-eslint": "^10.0.0",
     "babel-jest": "^27.0.6",
     "copy-webpack-plugin": "^9.0.1",
