--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@mui/lab": "^5.0.0-alpha.51",
-    "@mui/material": "^5.0.4",
-    "@mui/system": "^5.0.4",
+    "@mui/lab": "^5.0.0-alpha.66",
+    "@mui/material": "^5.3.1",
+    "@mui/system": "^5.3.0",
     "dayjs": "^1.10.7",
-    "gatsby": "^4.5.4",
+    "gatsby": "^4.6.0",
     "gatsby-plugin-manifest": "^4.5.2",
     "gatsby-plugin-material-ui": "^4.0.2",
-    "gatsby-plugin-offline": "^5.5.2",
+    "gatsby-plugin-offline": "^5.6.0",
     "gatsby-plugin-react-helmet": "^5.5.0",
     "gatsby-plugin-typescript": "^4.5.2",
     "hammerjs": "^2.0.8",
@@ -45,9 +45,9 @@
     "lodash": "^4.17.21",
     "mobx": "^6.3.13",
     "mobx-react": "^7.2.1",
-    "notistack": "^2.0.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "notistack": "^2.0.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "worker-loader": "^3.0.8"
   },
@@ -56,25 +56,25 @@
     "@babel/plugin-proposal-decorators": "^7.14.5",
     "@babel/plugin-transform-typescript": "^7.14.6",
     "@babel/preset-react": "^7.14.5",
-    "@testing-library/react": "^12.0.0",
+    "@testing-library/react": "^12.1.2",
     "@types/hammerjs": "^2.0.40",
-    "@types/jest": "^27.0.2",
+    "@types/jest": "^27.4.0",
     "@types/jsdom": "^16.2.13",
-    "@types/react-dom": "^17.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.29.2",
-    "@typescript-eslint/parser": "^4.29.2",
-    "babel-eslint": "^10.0.0",
-    "babel-jest": "^27.0.6",
-    "copy-webpack-plugin": "^9.0.1",
-    "eslint": "^7.32.0",
-    "eslint-plugin-react": "^7.24.0",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^27.4.6",
+    "eslint": "^8.8.0",
+    "eslint-plugin-react": "^7.28.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.2.4",
-    "jsdom": "^17.0.0",
-    "prettier": "^2.3.2",
+    "jest": "^27.4.7",
+    "jsdom": "^19.0.0",
+    "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.0.4",
-    "typescript": "^4.2.3",
+    "ts-jest": "^27.1.3",
+    "typescript": "^4.5.5",
     "workerloader-jest-transformer": "^0.0.5"
   }
 }
