--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@mui/icons-material": "^5.3.1",
     "@mui/lab": "^5.0.0-alpha.66",
     "@mui/material": "^5.3.1",
     "@mui/system": "^5.3.0",
@@ -49,6 +50,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
     "worker-loader": "^3.0.8"
   },
   "devDependencies": {
