--- a/package.json
+++ b/package.json
@@ -26,10 +26,7 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-regular-svg-icons": "^5.15.3",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@loadable/component": "^5.15.2",
     "@mui/icons-material": "^5.3.1",
     "@mui/lab": "^5.0.0-alpha.66",
     "@mui/material": "^5.3.1",
@@ -63,6 +60,7 @@
     "@types/hammerjs": "^2.0.40",
     "@types/jest": "^27.4.0",
     "@types/jsdom": "^16.2.13",
+    "@types/loadable__component": "^5.13.4",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
