perf(ui): switch to self-hosted fonts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "easytimer",
     "fluentui",
     "fontawesome",
+    "fontsource",
     "fortawesome",
     "gameend",
     "gamestart",
@@ -19,6 +20,7 @@
     "periotris",
     "periotrisjs",
     "pressup",
+    "roboto",
     "semibold",
     "structs",
     "tetrimino",
