--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@fontsource/fira-code": "^4.5.3",
     "@fontsource/roboto": "^4.5.2",
     "@mui/icons-material": "^5.3.1",
     "@mui/lab": "^5.0.0-alpha.66",
@@ -39,6 +40,7 @@
     "gatsby-plugin-offline": "^5.6.0",
     "gatsby-plugin-react-helmet": "^5.5.0",
     "gatsby-plugin-typescript": "^4.5.2",
+    "gatsby-source-local-git-modern": "^2.0.1",
     "hammerjs": "^2.0.8",
     "is-in-browser": "^2.0.0",
     "lodash": "^4.17.21",
