--- a/.gitignore
+++ b/.gitignore
@@ -120,7 +120,12 @@ public
 tmp/
 temp/
 
-# Added by cargo
+# yarn@berry
 
-target/
-pkg/
+.yarn/*
+.pnp.*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
