--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@mui/material": "^5.3.1",
     "@mui/system": "^5.3.0",
     "dayjs": "^1.10.7",
+    "events": "^3.3.0",
     "gatsby": "^4.6.0",
     "gatsby-plugin-manifest": "^4.5.2",
     "gatsby-plugin-material-ui": "^4.0.2",
@@ -59,10 +60,12 @@
     "@babel/plugin-transform-typescript": "^7.14.6",
     "@babel/preset-react": "^7.14.5",
     "@testing-library/react": "^12.1.2",
+    "@types/events": "^3.0.0",
     "@types/hammerjs": "^2.0.40",
     "@types/jest": "^27.4.0",
     "@types/jsdom": "^16.2.13",
     "@types/loadable__component": "^5.13.4",
+    "@types/lodash": "^4.14.178",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-helmet": "^6.1.5",
