build: switch calls to npx to yarn run

--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "2.0.0",
   "description": "Get familiar with the Periodic Table of Elements in a fun way, directly in your browsers.",
   "scripts": {
-    "ci-install-deps": "yarn install --prefer-offline --frozen-lockfile",
-    "ci-build-prefixed": "gatsby build --prefix-paths",
-    "clean": "npx rimraf coverage public && gatsby clean",
-    "build": "gatsby build",
+    "ci-install-deps": "yarn install --immutable",
+    "ci-build-prefixed": "yarn run -B gatsby build --prefix-paths",
+    "clean": "yarn run -B rimraf coverage public && yarn run -B gatsby clean",
+    "build": "yarn run -B gatsby build",
     "rebuild": "yarn run clean && yarn run build",
-    "develop": "gatsby develop",
+    "develop": "yarn run -B gatsby develop",
     "start": "yarn run develop",
-    "serve": "gatsby serve",
-    "test": "jest",
-    "coverage": "jest --coverage"
+    "serve": "yarn run -B gatsby serve",
+    "test": "yarn run -B jest",
+    "coverage": "yarn run -B jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -75,8 +75,9 @@
     "babel-jest": "^27.4.6",
     "eslint": "^8.8.0",
     "eslint-plugin-react": "^7.28.0",
+    "gatsby-cli": "^4.6.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.4.7",
+    "jest": "^27.5.0",
     "jsdom": "^19.0.0",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
