--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
           cache: "yarn"
       - name: Set up dependencies
         run: |
-          yarn run ci-install-deps
+          yarn install --immutable
       - name: Build
         run: |
           yarn run ci-build-prefixed
