--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -14,7 +14,7 @@ jobs:
           cache: "yarn"
       - name: Set up dependencies
         run: |
-          yarn run ci-install-deps
+          yarn install --immutable
       - name: Build
         run: |
           yarn run build
@@ -39,7 +39,7 @@ jobs:
           cache: "yarn"
       - name: Set up dependencies
         run: |
-          yarn run ci-install-deps
+          yarn install --immutable
       - name: Test
         run: |
           yarn run test
@@ -57,7 +57,7 @@ jobs:
           cache: "yarn"
       - name: Set up dependencies
         run: |
-          yarn run ci-install-deps
+          yarn install --immutable
       - name: Coverage
         uses: paambaati/codeclimate-action@v3.0.0
         env:
