--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -17,7 +17,10 @@ exclude_patterns:
   - "**/dist/"
   - "plugins/"
   - "static/"
-  - "ject.config.js"
+  - ".yarn/"
+  - ".github/"
+  - ".vscode/"
+  - "jest.config.js"
   - "jest-preprocess.js"
   - "gatsby-config.js"
   - "gatsby-node.js"
