ci: update CodeClimate ignore list

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -20,7 +20,11 @@ exclude_patterns:
   - ".yarn/"
   - ".github/"
   - ".vscode/"
+  - "**/*.cjs"
+  - ".pnp.*"
   - "jest.config.js"
   - "jest-preprocess.js"
   - "gatsby-config.js"
   - "gatsby-node.js"
+  - "gatsby-browser.js"
+  - "gatsby-ssr.js"
