--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Set up dependencies
         run: |
           yarn install --immutable
+      - name: Static type check
+        run: |
+          yarn run check
       - name: Build
         run: |
           yarn run build
