perf: eliminate redundant properties

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,8 +12,8 @@
     "fontawesome",
     "fontsource",
     "fortawesome",
-    "gameend",
-    "gamestart",
+    "gameended",
+    "gamestarted",
     "gamestatechanged",
     "lightgreen",
     "localstorage",
