--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "clean": "yarn run -B rimraf build coverage public && yarn run -B gatsby clean",
     "build": "yarn run -B gatsby build",
     "rebuild": "yarn run clean && yarn run build",
-    "develop": "yarn run -B gatsby develop",
+    "develop": "yarn run -B gatsby develop -H 0.0.0.0",
     "start": "yarn run develop",
-    "serve": "yarn run -B gatsby serve",
+    "serve": "yarn run -B gatsby serve -H 0.0.0.0",
     "test": "yarn run -B jest",
     "coverage": "yarn run -B jest --coverage",
     "check": "yarn run tsc --noEmit"
@@ -68,7 +68,6 @@
     "@types/react-helmet": "^6.1.5",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
-    "babel-eslint": "^10.1.0",
     "babel-jest": "^27.4.6",
     "eslint": "^8.8.0",
     "eslint-plugin-react": "^7.28.0",
