feat(ui): switch to backdrops to control game process

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,16 +15,20 @@
     "gameended",
     "gamestarted",
     "gamestatechanged",
+    "googlefonts",
     "lightgreen",
     "localstorage",
     "notistack",
+    "noto",
     "Offseted",
+    "opentype",
     "periotris",
     "periotrisjs",
     "precache",
     "pressup",
     "roboto",
     "Rong",
+    "Segoe",
     "semibold",
     "structs",
     "tetrimino",
