--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@mui/lab": "^5.0.0-alpha.66",
     "@mui/material": "^5.3.1",
     "@mui/system": "^5.3.0",
+    "canvas-confetti": "^1.5.1",
     "dayjs": "^1.10.7",
     "events": "^3.3.0",
     "gatsby": "^4.6.0",
@@ -57,6 +58,7 @@
     "@babel/plugin-transform-typescript": "^7.14.6",
     "@babel/preset-react": "^7.14.5",
     "@testing-library/react": "^12.1.2",
+    "@types/canvas-confetti": "^1.4.2",
     "@types/events": "^3.0.0",
     "@types/hammerjs": "^2.0.40",
     "@types/jest": "^27.4.0",
