--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,3 @@
 {
-  "presets": ["@babel/preset-react"],
-  "plugins": [
-    [
-      "@babel/plugin-transform-typescript",
-      {
-        "allowDeclareFields": true,
-        "isTSX": true,
-        "jsxPragma": "React"
-      }
-    ]
-  ]
+  "presets": ["babel-preset-gatsby"]
 }
