--- a/package.json
+++ b/package.json
@@ -51,12 +51,10 @@
     "mobx-react": "^7.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
-    "worker-loader": "^3.0.8"
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "@babel/plugin-transform-typescript": "^7.14.6",
-    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-react": "^7.16.7",
     "@testing-library/react": "^12.1.2",
     "@types/canvas-confetti": "^1.4.2",
     "@types/events": "^3.0.0",
@@ -70,6 +68,7 @@
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "babel-jest": "^27.4.6",
+    "babel-preset-gatsby": "^2.7.0",
     "eslint": "^8.8.0",
     "eslint-plugin-react": "^7.28.0",
     "gatsby-cli": "^4.6.1",
@@ -79,8 +78,7 @@
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.3",
-    "typescript": "^4.5.5",
-    "workerloader-jest-transformer": "^0.0.5"
+    "typescript": "^4.5.5"
   },
   "packageManager": "yarn@3.1.1"
 }
