--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "serve": "yarn run -B gatsby serve -H 0.0.0.0",
     "test": "yarn run -B jest",
     "coverage": "yarn run -B jest --coverage",
-    "check": "yarn run tsc --noEmit"
+    "check": "yarn run tsc --noEmit",
+    "serve-bundle-stats": "yarn run -B webpack-bundle-analyzer ./public/stats.json -h 0.0.0.0"
   },
   "repository": {
     "type": "git",
@@ -79,7 +80,8 @@
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.3",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "webpack-bundle-analyzer": "^4.5.0"
   },
   "packageManager": "yarn@3.1.1"
 }
