--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "canvas-confetti": "^1.5.1",
     "dayjs": "^1.10.7",
     "events": "^3.3.0",
-    "gatsby": "^4.6.0",
+    "gatsby": "^4.10.3",
     "gatsby-plugin-manifest": "^4.5.2",
     "gatsby-plugin-material-ui": "^4.0.2",
     "gatsby-plugin-offline": "^5.6.0",
@@ -67,13 +67,14 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-helmet": "^6.1.5",
+    "@types/webpack-bundle-analyzer": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "babel-jest": "^27.4.6",
     "babel-preset-gatsby": "^2.7.0",
     "eslint": "^8.8.0",
     "eslint-plugin-react": "^7.28.0",
-    "gatsby-cli": "^4.6.1",
+    "gatsby-cli": "4.10.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.0",
     "jsdom": "^19.0.0",
