--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "gatsby-plugin-offline": "^5.6.0",
     "gatsby-plugin-react-helmet": "^5.5.0",
     "gatsby-plugin-typescript": "^4.5.2",
-    "gatsby-source-local-git-modern": "^2.0.1",
+    "gatsby-source-local-git": "^1.3.0",
     "gatsby-source-package": "^1.0.0",
     "hammerjs": "^2.0.8",
     "is-in-browser": "^2.0.0",
