--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lodash": "^4.17.21",
     "mobx": "^6.3.13",
     "mobx-react": "^7.2.1",
+    "notistack": "^2.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0"
