--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@mui/lab": "^5.0.0-alpha.66",
     "@mui/material": "^5.3.1",
     "@mui/system": "^5.3.0",
+    "ajv": "^8.11.0",
     "canvas-confetti": "^1.5.1",
     "dayjs": "^1.10.7",
     "events": "^3.3.0",
