--- a/package.json
+++ b/package.json
@@ -26,64 +26,64 @@
   },
   "homepage": "https://github.com/CSharperMantle/periotrisjs#readme",
   "dependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@fontsource/fira-code": "^4.5.3",
-    "@fontsource/roboto": "^4.5.2",
-    "@mui/icons-material": "^5.3.1",
-    "@mui/lab": "^5.0.0-alpha.66",
-    "@mui/material": "^5.3.1",
-    "@mui/system": "^5.3.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@fontsource/fira-code": "^4.5.8",
+    "@fontsource/roboto": "^4.5.5",
+    "@mui/icons-material": "^5.6.0",
+    "@mui/lab": "^5.0.0-alpha.76",
+    "@mui/material": "^5.6.0",
+    "@mui/system": "^5.6.0",
     "ajv": "^8.11.0",
     "canvas-confetti": "^1.5.1",
-    "dayjs": "^1.10.7",
+    "dayjs": "^1.11.0",
     "events": "^3.3.0",
-    "gatsby": "^4.10.3",
-    "gatsby-plugin-manifest": "^4.5.2",
-    "gatsby-plugin-material-ui": "^4.0.2",
-    "gatsby-plugin-offline": "^5.6.0",
-    "gatsby-plugin-react-helmet": "^5.5.0",
-    "gatsby-plugin-typescript": "^4.5.2",
+    "gatsby": "^4.11.2",
+    "gatsby-plugin-manifest": "^4.11.1",
+    "gatsby-plugin-material-ui": "^4.1.0",
+    "gatsby-plugin-offline": "^5.11.1",
+    "gatsby-plugin-react-helmet": "^5.11.0",
+    "gatsby-plugin-typescript": "^4.11.1",
     "gatsby-source-local-git": "^1.3.0",
-    "gatsby-source-package": "^1.0.0",
+    "gatsby-source-package": "^1.0.1",
     "hammerjs": "^2.0.8",
     "is-in-browser": "^2.0.0",
     "lodash": "^4.17.21",
-    "mobx": "^6.3.13",
-    "mobx-react": "^7.2.1",
+    "mobx": "^6.5.0",
+    "mobx-react": "^7.3.0",
     "notistack": "^2.0.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.2",
+    "@babel/core": "^7.17.9",
     "@babel/preset-react": "^7.16.7",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/react": "^13.0.0",
     "@types/canvas-confetti": "^1.4.2",
     "@types/events": "^3.0.0",
-    "@types/hammerjs": "^2.0.40",
-    "@types/jest": "^27.4.0",
-    "@types/jsdom": "^16.2.13",
-    "@types/lodash": "^4.14.178",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
+    "@types/hammerjs": "^2.0.41",
+    "@types/jest": "^27.4.1",
+    "@types/jsdom": "^16.2.14",
+    "@types/lodash": "^4.14.181",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@types/react-helmet": "^6.1.5",
     "@types/webpack-bundle-analyzer": "^4.4.1",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "@typescript-eslint/parser": "^5.10.1",
-    "babel-jest": "^27.4.6",
-    "babel-preset-gatsby": "^2.7.0",
-    "eslint": "^8.8.0",
-    "eslint-plugin-react": "^7.28.0",
-    "gatsby-cli": "4.10.2",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
+    "babel-jest": "^27.5.1",
+    "babel-preset-gatsby": "^2.11.1",
+    "eslint": "^8.12.0",
+    "eslint-plugin-react": "^7.29.4",
+    "gatsby-cli": "4.11.2",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.5.0",
+    "jest": "^27.5.1",
     "jsdom": "^19.0.0",
-    "prettier": "^2.5.1",
+    "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.1.3",
-    "typescript": "^4.5.5",
+    "ts-jest": "^27.1.4",
+    "typescript": "~4.5.5",
     "webpack-bundle-analyzer": "^4.5.0"
   },
   "packageManager": "yarn@3.1.1"
