--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@mui/lab": "^5.0.0-alpha.77",
     "@mui/material": "^5.6.1",
     "@mui/system": "^5.6.1",
+    "@reduxjs/toolkit": "^1.8.1",
     "ajv": "^8.11.0",
     "canvas-confetti": "^1.5.1",
     "dayjs": "^1.11.1",
@@ -55,6 +56,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
+    "react-redux": "^8.0.1",
     "toposort": "^2.0.2"
   },
   "devDependencies": {
@@ -70,6 +72,7 @@
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
     "@types/react-helmet": "^6.1.5",
+    "@types/react-redux": "^7.1.24",
     "@types/toposort": "^2.0.3",
     "@types/webpack-bundle-analyzer": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
