--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "@fontsource/fira-code": "^4.5.9",
     "@fontsource/roboto": "^4.5.5",
     "@mui/icons-material": "^5.6.2",
-    "@mui/lab": "^5.0.0-alpha.78",
     "@mui/material": "^5.6.2",
     "@mui/system": "^5.6.2",
     "@reduxjs/toolkit": "^1.8.1",
+    "ajv": "^8.11.0",
     "canvas-confetti": "^1.5.1",
     "dayjs": "^1.11.1",
     "events": "^3.3.0",
