--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Get familiar with the Periodic Table of Elements in a fun way, directly in your browsers.",
   "scripts": {
     "ci-build-prefixed": "yarn run -B gatsby build --prefix-paths",
-    "clean": "yarn run -B rimraf build coverage public && yarn run -B gatsby clean",
+    "clean": "yarn run -B rimraf build coverage public pkg target && yarn run -B gatsby clean",
     "build": "yarn run -B gatsby build",
     "rebuild": "yarn run clean && yarn run build",
     "develop": "yarn run -B gatsby develop -H 0.0.0.0",
@@ -74,6 +74,7 @@
     "@types/webpack-bundle-analyzer": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
+    "@wasm-tool/wasm-pack-plugin": "^1.6.0",
     "ajv-json-loader": "^0.2.0",
     "babel-jest": "^27.5.1",
     "babel-preset-gatsby": "^2.12.1",
