--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
     "@types/canvas-confetti": "^1.4.3",
     "@types/events": "^3.0.0",
     "@types/hammerjs": "^2.0.41",
-    "@types/jest": "^27.5.2",
-    "@types/jsdom": "^16.2.15",
+    "@types/jest": "^28.1.6",
+    "@types/jsdom": "^20.0.0",
     "@types/lodash": "^4.14.182",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
@@ -75,17 +75,18 @@
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "ajv-json-loader": "^0.2.0",
-    "babel-jest": "^27.5.1",
+    "babel-jest": "^28.1.3",
     "babel-preset-gatsby": "^2.19.0",
     "eslint": "^8.21.0",
     "eslint-plugin-react": "^7.30.1",
     "gatsby-cli": "4.19.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.5.1",
-    "jsdom": "^19.0.0",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
+    "jsdom": "^20.0.0",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.1.5",
+    "ts-jest": "^28.0.7",
     "typescript": "~4.5.5",
     "webpack-bundle-analyzer": "^4.5.0"
   },
