perf: add batch sprite update

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,11 @@
     "rootDir": "./src/",
     "downlevelIteration": true,
     "isolatedModules": true,
+    "noEmit": true,
 
     "strict": true,
     "noImplicitAny": true,
-    "strictNullChecks": false /* TODO: Make this true! */,
+    "strictNullChecks": true,
     "strictFunctionTypes": true,
     "strictBindCallApply": true,
     "strictPropertyInitialization": false /* TODO: Make this true! */,
@@ -22,7 +23,7 @@
     "exactOptionalPropertyTypes": false /* TODO: Make this true! */,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedIndexedAccess": true,
+    "noUncheckedIndexedAccess": false,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "allowUnusedLabels": false,
