--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-20.04
-
+    env:
+      - BUILD_ADD_PATH_PREFIX: true
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js 18.x
@@ -24,7 +25,7 @@ jobs:
           yarn run check
       - name: Build
         run: |
-          yarn run ci-build-prefixed
+          yarn run build --prefix-paths
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4.4.0
         with:
